--- a/deployment/templates/result.html
+++ b/deployment/templates/result.html
@@ -4,7 +4,10 @@
     <title>KSI result</title>
 </head>
 <body>
-    <h1>KSI result</h1>
-    <p>Prediction: {{prediction}}</p>
+    <h2>Accuracy:</h2>
+    <p>{{accuracy}}</p>
+
+    <h2>Ratio:</h2>
+    <p>{{ratio}} correct answers</p>
 </body>
 </html>
