--- a/deployment/templates/index.html
+++ b/deployment/templates/index.html
@@ -14,7 +14,7 @@
     <form id="data-form" action="/result" method="post" enctype="multipart/form-data">
         <input type="file" id="csvFileInput" name="csvfile" accept=".csv"> <br><br>
         <div id="csvData"></div><br>
-        <button type="submit" id="predict_btn">Predict</button>
+        <button type="submit" id="predict_btn" style="display:None">Predict</button>
     </form>
 
 </body>
