--- a/deployment/static/style.css
+++ b/deployment/static/style.css
@@ -7,3 +7,8 @@ table, tr, td {
     border-collapse: collapse;
     border: 1px solid;
 }
+#csvData{
+    width: 100%;
+    max-height: 300px; 
+    overflow-y: auto;
+}
