--- a/deployment/static/style.css
+++ b/deployment/static/style.css
@@ -1,14 +1,9 @@
-tr:first-child {
-    background: lightgray;
+h1 {
+    justify-content: center;
     text-align: center;
-    font-weight: bold;
 }
-table, tr, td {
-    border-collapse: collapse;
-    border: 1px solid;
-}
-#csvData{
-    width: 100%;
-    max-height: 300px; 
-    overflow-y: auto;
+
+body{
+    width: 980px;
+    margin: 0 auto;
 }
