Log, nn, svm deployed

--- a/deployment/static/style.css
+++ b/deployment/static/style.css
@@ -3,7 +3,19 @@ h1 {
     text-align: center;
 }
 
-body{
+.main{
     width: 980px;
     margin: 0 auto;
+}
+
+
+
+input[type="submit"] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
 }
