--- a/deployment/static/style.css
+++ b/deployment/static/style.css
@@ -8,6 +8,13 @@ h1 {
     margin: 0 auto;
 }
 
+footer {
+    text-align: center;
+    padding: 10px;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+}
 
 
 input[type="submit"] {
